Fix install code

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -6,6 +6,10 @@ commit = True
 search = version-{current_version}-yellow.svg
 replace = version-{new_version}-yellow.svg
 
+[bumpversion:file:README.md]
+search = gem "@vigo/gh_issues" ~> "{current_version}"
+replace = gem "@vigo/gh_issues" ~> "{new_version}"
+
 [bumpversion:file:lib/gh_issues/version.rb]
 search = VERSION = "{current_version}"
 replace = VERSION = "{new_version}"
