--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: false
 language: ruby
 rvm:
-  - 2.3.0
-before_install: gem install bundler -v 1.12.5
+  - 2.6.5
+before_install:
+    - gem update --system
+    - gem install bundler
