--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,11 +2,15 @@
 current_version = 0.4.7
 commit = True
 
-[bumpversion:file:README.md]
-search = gem "@vigo/gh_issues" ~> "{current_version}"
-replace = gem "@vigo/gh_issues" ~> "{new_version}"
-
 [bumpversion:file:lib/gh_issues/version.rb]
 search = VERSION = "{current_version}"
 replace = VERSION = "{new_version}"
+
+[bumpversion:file:README.md]
+search = gh_issues --version "{current_version}"
+replace = gh_issues --version "{new_version}"
+
+[bumpversion:file:Gemfile.lock]
+search = gh_issues ({current_version})
+replace = gh_issues ({new_version})
 
